--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header id="head" class="header">
     <div class="container">
       <div class="header-wrapper">
         <div class="header__logo">
@@ -114,12 +114,10 @@
       </div>
     </div>
     <!-- /.electric-wrapper -->
-    <a href="#form" class="button">
-      <button class="button__but">
-        Получить консультацию
-      </button>
+    <a href="#head" class="button-link">
+      Получить консультацию
     </a>
-    <button data-toggle="modal" class="button button--mobile">
+    <button data-toggle="modal" class="button-mobile">
       Получить консультацию
     </button>
   </section>
