create cleaning section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="#" class="nav__link">Сантехника</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Клининг</a>
+              <a href="#cln" class="nav__link">Клининг</a>
             </li>
           </ul>
         </nav>
@@ -122,6 +122,35 @@
     </button>
   </section>
   <!-- /.electric -->
+
+  <section id="cln" class="cleaning">
+    <h2 class="cleaning__title">Клининг</h2>
+    <div class="cleaning-wrapper">
+      <ul class="cleaning__list cleaning__list--left">
+        <li class="cleaning__item">Генеральная уборка</li>
+        <li class="cleaning__item">Уборка после ремонта</li>
+        <li class="cleaning__item">Уборка квартиры от пыли</li>
+        <li class="cleaning__item">Мытье полов</li>
+        <li class="cleaning__item">Уборка офисов после ремонта</li>
+        <li class="cleaning__item">Уборка помещений</li>
+      </ul>
+      <ul class="cleaning__list cleaning__list--right">
+        <li class="cleaning__item">Уборка территории организации</li>
+        <li class="cleaning__item">Уборка предприятий</li>
+        <li class="cleaning__item">Уборка коттеджей</li>
+        <li class="cleaning__item">Уборка листьев</li>
+        <li class="cleaning__item">Уборка снега</li>
+        <li class="cleaning__item">Мойка окон и фасадов</li>
+      </ul>
+    </div>
+    <a href="#head" class="button-link">
+      Получить консультацию
+    </a>
+    <button data-toggle="modal" class="button-mobile">
+      Получить консультацию
+    </button>
+  </section>
+  <!-- /.cleaning -->
 
 
   <div class="modal">
