create plumbing section and fixed ...

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="#el" class="nav__link">Электрика</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Сантехника</a>
+              <a href="#pl" class="nav__link">Сантехника</a>
             </li>
             <li class="nav__item">
               <a href="#cln" class="nav__link">Клининг</a>
@@ -68,6 +68,7 @@
     <!-- /.container -->
   </main>
   <!-- /.main -->
+
   <section id="el" class="electric">
     <h2 class="electric__title">Электрика</h2>
     <div class="electric-wrapper">
@@ -151,6 +152,72 @@
     </button>
   </section>
   <!-- /.cleaning -->
+
+  <section id="pl" class="plumbing">
+    <h2 class="plumbing__title">Сантеxника</h2>
+    <div class="plumbing-wrapper">
+      <ul class="plumbing__list">
+        <li class="plumbing__item">Устранение течи и засоров</li>
+        <li class="plumbing__item">Перенос и установка счетчиков</li>
+        <li class="plumbing__item">Замена смесителей</li>
+        <li class="plumbing__item">Монтаж/демонтаж ванны, раковины,<br> унитаза, душевой кабины</li>
+        <li class="plumbing__item">Замена и перенос полотенцесушителя</li>
+        <li class="plumbing__item">Замена батарей отопления</li>
+        <li class="plumbing__item">Замена труб в ванной и туалете</li>
+        <li class="plumbing__item">Подключение техники</li>
+      </ul>
+      <div class="swiper-container plumbing__slider">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="plumbing-slide">
+              <img src="img/plumbing-slider-1.jpg" alt="Фото работы" class="plumbing__slider-img">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="plumbing-slide">
+              <img src="img/plumbing-slider-2.jpg" alt="Фото работы" class="plumbing__slider-img">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="plumbing-slide">
+              <img src="img/plumbing-slider-3.jpg" alt="Фото работы" class="plumbing__slider-img">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="plumbing-slide">
+              <img src="img/plumbing-slider-4.jpg" alt="Фото работы" class="plumbing__slider-img">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="plumbing-slide">
+              <img src="img/plumbing-slider-5.jpg" alt="Фото работы" class="plumbing__slider-img">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="plumbing-slide">
+              <img src="img/plumbing-slider-7.jpg" alt="Фото работы" class="plumbing__slider-img">
+            </div>
+          </div>
+        </div>
+        <svg class="plumbing-button-prev">
+          <use xlink:href="img/sprite.svg#button-prev"></use>
+        </svg>
+        <svg class="plumbing-button-next">
+          <use xlink:href="img/sprite.svg#button-next"></use>
+        </svg>
+      </div>
+    </div>
+    <!-- /.plumbing-wrapper -->
+    <a href="#head" class="button-link">
+      Получить консультацию
+    </a>
+    <button data-toggle="modal" class="button-mobile">
+      Получить консультацию
+    </button>
+  </section>
+  <!-- /.plumbing -->
 
 
   <div class="modal">
